@@ -12,6 +12,9 @@
  */
 package org.activiti.engine.test.api.v6;
 
+import static java.util.Collections.singletonMap;
+import static org.assertj.core.api.Assertions.assertThat;
+
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,7 +22,6 @@ import java.util.Map;
 import org.activiti.engine.impl.history.HistoryLevel;
 import org.activiti.engine.impl.persistence.entity.ProcessDefinitionEntity;
 import org.activiti.engine.impl.test.PluggableActivitiTestCase;
-import org.activiti.engine.impl.util.CollectionUtil;
 import org.activiti.engine.repository.Deployment;
 import org.activiti.engine.repository.ProcessDefinition;
 import org.activiti.engine.runtime.Execution;
@@ -39,13 +41,12 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         repositoryService.createDeployment().addClasspathResource("org/activiti/engine/test/api/v6/Activiti6Test.simplestProcessPossible.bpmn20.xml").deploy();
 
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("startToEnd");
-        assertNotNull(processInstance);
-        assertTrue(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isTrue();
 
         // Cleanup
         for (Deployment deployment : repositoryService.createDeploymentQuery().list()) {
-            repositoryService.deleteDeployment(deployment.getId(),
-                                               true);
+            repositoryService.deleteDeployment(deployment.getId(), true);
         }
     }
 
@@ -53,14 +54,12 @@ public class Activiti6Test extends PluggableActivitiTestCase {
     @org.activiti.engine.test.Deployment
     public void testOneTaskProcess() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Task task = taskService.createTaskQuery().singleResult();
-        assertEquals("The famous task",
-                     task.getName());
-        assertEquals("kermit",
-                     task.getAssignee());
+        assertThat(task.getName()).isEqualTo("The famous task");
+        assertThat(task.getAssignee()).isEqualTo("kermit");
 
         taskService.complete(task.getId());
     }
@@ -69,64 +68,52 @@ public class Activiti6Test extends PluggableActivitiTestCase {
     @org.activiti.engine.test.Deployment(resources = "org/activiti/engine/test/api/v6/Activiti6Test.testOneTaskProcess.bpmn20.xml")
     public void testOneTaskProcessCleanupInMiddleOfProcess() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Task task = taskService.createTaskQuery().singleResult();
-        assertEquals("The famous task",
-                     task.getName());
-        assertEquals("kermit",
-                     task.getAssignee());
+        assertThat(task.getName()).isEqualTo("The famous task");
+        assertThat(task.getAssignee()).isEqualTo("kermit");
     }
 
     @Test
     @org.activiti.engine.test.Deployment
     public void testSimpleParallelGateway() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("simpleParallelGateway");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         List<Task> tasks = taskService.createTaskQuery().processDefinitionKey("simpleParallelGateway").orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("Task a",
-                     tasks.get(0).getName());
-        assertEquals("Task b",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("Task a");
+        assertThat(tasks.get(1).getName()).isEqualTo("Task b");
 
         for (Task task : tasks) {
             taskService.complete(task.getId());
         }
 
-        assertEquals(0,
-                     runtimeService.createProcessInstanceQuery().count());
+        assertThat(runtimeService.createProcessInstanceQuery().count()).isEqualTo(0);
     }
 
     @Test
     @org.activiti.engine.test.Deployment
     public void testSimpleNestedParallelGateway() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("simpleParallelGateway");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         List<Task> tasks = taskService.createTaskQuery().processDefinitionKey("simpleParallelGateway").orderByTaskName().asc().list();
-        assertEquals(4,
-                     tasks.size());
-        assertEquals("Task a",
-                     tasks.get(0).getName());
-        assertEquals("Task b1",
-                     tasks.get(1).getName());
-        assertEquals("Task b2",
-                     tasks.get(2).getName());
-        assertEquals("Task c",
-                     tasks.get(3).getName());
+        assertThat(tasks).hasSize(4);
+        assertThat(tasks.get(0).getName()).isEqualTo("Task a");
+        assertThat(tasks.get(1).getName()).isEqualTo("Task b1");
+        assertThat(tasks.get(2).getName()).isEqualTo("Task b2");
+        assertThat(tasks.get(3).getName()).isEqualTo("Task c");
 
         for (Task task : tasks) {
             taskService.complete(task.getId());
         }
 
-        assertEquals(0,
-                     runtimeService.createProcessInstanceQuery().count());
+        assertThat(runtimeService.createProcessInstanceQuery().count()).isEqualTo(0);
     }
 
     /*
@@ -140,23 +127,20 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         // on, try it!
         Map<String, Object> vars = new HashMap<String, Object>();
         vars.put("counter",
-                 new Integer(0));
+                 Integer.valueOf(0));
         vars.put("maxCount",
                  maxCount);
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("testLongServiceTaskLoop",
                                                                                    vars);
-        assertNotNull(processInstance);
-        assertTrue(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isTrue();
 
-        assertEquals(maxCount,
-                     CountingServiceTaskTestDelegate.CALL_COUNT.get());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(CountingServiceTaskTestDelegate.CALL_COUNT.get()).isEqualTo(maxCount);
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
 
         if (processEngineConfiguration.getHistoryLevel().isAtLeast(HistoryLevel.AUDIT)) {
-            assertEquals(maxCount,
-                         historyService.createHistoricActivityInstanceQuery()
-                                 .processInstanceId(processInstance.getId()).activityId("serviceTask").count());
+            assertThat(historyService.createHistoricActivityInstanceQuery()
+                                 .processInstanceId(processInstance.getId()).activityId("serviceTask").count()).isEqualTo(maxCount);
         }
     }
 
@@ -170,61 +154,54 @@ public class Activiti6Test extends PluggableActivitiTestCase {
                         2);
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess",
                                                                                    variableMap);
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Number sumVariable = (Number) runtimeService.getVariable(processInstance.getId(),
                                                                  "sum");
-        assertEquals(3,
-                     sumVariable.intValue());
+        assertThat(sumVariable.intValue()).isEqualTo(3);
 
         Execution execution = runtimeService.createExecutionQuery().processInstanceId(processInstance.getId()).onlyChildExecutions().singleResult();
-        assertNotNull(execution);
+        assertThat(execution).isNotNull();
 
         runtimeService.trigger(execution.getId());
 
-        assertNull(runtimeService.createProcessInstanceQuery().processInstanceId(processInstance.getId()).singleResult());
+        assertThat(runtimeService.createProcessInstanceQuery().processInstanceId(processInstance.getId()).singleResult()).isNull();
     }
 
     @Test
     @org.activiti.engine.test.Deployment
     public void testSimpleTimerBoundaryEvent() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("simpleBoundaryTimer");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Job job = managementService.createTimerJobQuery().singleResult();
         managementService.moveTimerToExecutableJob(job.getId());
         managementService.executeJob(job.getId());
 
         Task task = taskService.createTaskQuery().singleResult();
-        assertEquals("Task after timer",
-                     task.getName());
+        assertThat(task.getName()).isEqualTo("Task after timer");
 
         taskService.complete(task.getId());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     @Test
     @org.activiti.engine.test.Deployment
     public void testSimpleTimerBoundaryEventTimerDoesNotFire() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("simpleBoundaryTimer");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
-        assertEquals(1,
-                     managementService.createTimerJobQuery().count());
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(1);
 
         Task task = taskService.createTaskQuery().singleResult();
-        assertEquals("The famous task",
-                     task.getName());
+        assertThat(task.getName()).isEqualTo("The famous task");
         taskService.complete(task.getId());
 
-        assertEquals(0,
-                     managementService.createTimerJobQuery().count());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(0);
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     @Test
@@ -236,24 +213,22 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         // (see the task name ordering in the query to get that specific order)
 
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("simpleBoundaryTimer");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Job job = managementService.createTimerJobQuery().singleResult();
         managementService.moveTimerToExecutableJob(job.getId());
         managementService.executeJob(job.getId());
 
         List<Task> tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
+        assertThat(tasks).hasSize(2);
 
         // Completing them both should complete the process instance
         for (Task task : tasks) {
             taskService.complete(task.getId());
         }
 
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
 
         // Second test: complete tasks: first task associated with child
         // execution, then parent execution (easier case)
@@ -267,8 +242,7 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         for (Task task : tasks) {
             taskService.complete(task.getId());
         }
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     @Test
@@ -277,23 +251,18 @@ public class Activiti6Test extends PluggableActivitiTestCase {
 
         // 3 conditions are true for input = 2
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("testConditions",
-                                                                                   CollectionUtil.singletonMap("input",
-                                                                                                               2));
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+                                                                                   singletonMap("input", 2));
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         Task task = taskService.createTaskQuery().singleResult();
         taskService.complete(task.getId());
 
         List<Task> tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(3,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
-        assertEquals("C",
-                     tasks.get(2).getName());
+        assertThat(tasks).hasSize(3);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
+        assertThat(tasks.get(2).getName()).isEqualTo("C");
 
         for (Task t : tasks) {
             taskService.complete(t.getId());
@@ -301,18 +270,14 @@ public class Activiti6Test extends PluggableActivitiTestCase {
 
         // 2 conditions are true for input = 20
         processInstance = runtimeService.startProcessInstanceByKey("testConditions",
-                                                                   CollectionUtil.singletonMap("input",
-                                                                                               20));
+                                                                   singletonMap("input", 20));
         task = taskService.createTaskQuery().singleResult();
         taskService.complete(task.getId());
 
         tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("B",
-                     tasks.get(0).getName());
-        assertEquals("C",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("B");
+        assertThat(tasks.get(1).getName()).isEqualTo("C");
 
         for (Task t : tasks) {
             taskService.complete(t.getId());
@@ -320,16 +285,13 @@ public class Activiti6Test extends PluggableActivitiTestCase {
 
         // 1 condition is true for input = 200
         processInstance = runtimeService.startProcessInstanceByKey("testConditions",
-                                                                   CollectionUtil.singletonMap("input",
-                                                                                               200));
+                                                                   singletonMap("input", 200));
         task = taskService.createTaskQuery().singleResult();
         taskService.complete(task.getId());
 
         tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(1,
-                     tasks.size());
-        assertEquals("C",
-                     tasks.get(0).getName());
+        assertThat(tasks).hasSize(1);
+        assertThat(tasks.get(0).getName()).isEqualTo("C");
 
         for (Task t : tasks) {
             taskService.complete(t.getId());
@@ -340,62 +302,44 @@ public class Activiti6Test extends PluggableActivitiTestCase {
     @org.activiti.engine.test.Deployment
     public void testNonInterruptingMoreComplex() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("nonInterruptingTimer");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         List<Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
 
         // Triggering the timers cancels B, but A is not interrupted
         List<Job> jobs = managementService.createTimerJobQuery().list();
-        assertEquals(2,
-                     jobs.size());
+        assertThat(jobs).hasSize(2);
         for (Job job : jobs) {
             managementService.moveTimerToExecutableJob(job.getId());
             managementService.executeJob(job.getId());
         }
 
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(5,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("C",
-                     tasks.get(1).getName());
-        assertEquals("D",
-                     tasks.get(2).getName());
-        assertEquals("E",
-                     tasks.get(3).getName());
-        assertEquals("F",
-                     tasks.get(4).getName());
+        assertThat(tasks).hasSize(5);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("C");
+        assertThat(tasks.get(2).getName()).isEqualTo("D");
+        assertThat(tasks.get(3).getName()).isEqualTo("E");
+        assertThat(tasks.get(4).getName()).isEqualTo("F");
 
         // Firing timer shouldn't cancel anything, but create new task
         jobs = managementService.createTimerJobQuery().list();
-        assertEquals(1,
-                     jobs.size());
+        assertThat(jobs).hasSize(1);
         managementService.moveTimerToExecutableJob(jobs.get(0).getId());
         managementService.executeJob(jobs.get(0).getId());
 
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(6,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("C",
-                     tasks.get(1).getName());
-        assertEquals("D",
-                     tasks.get(2).getName());
-        assertEquals("E",
-                     tasks.get(3).getName());
-        assertEquals("F",
-                     tasks.get(4).getName());
-        assertEquals("G",
-                     tasks.get(5).getName());
+        assertThat(tasks).hasSize(6);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("C");
+        assertThat(tasks.get(2).getName()).isEqualTo("D");
+        assertThat(tasks.get(3).getName()).isEqualTo("E");
+        assertThat(tasks.get(4).getName()).isEqualTo("F");
+        assertThat(tasks.get(5).getName()).isEqualTo("G");
 
         // Completing all tasks in this order should give the engine a bit
         // exercise (parent executions first)
@@ -403,8 +347,7 @@ public class Activiti6Test extends PluggableActivitiTestCase {
             taskService.complete(task.getId());
         }
 
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     @Test
@@ -413,121 +356,85 @@ public class Activiti6Test extends PluggableActivitiTestCase {
 
         // Use case 1: no timers fire
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("nonInterruptingWithInclusiveMerge");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
 
         List<Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
-        assertEquals(2,
-                     managementService.createTimerJobQuery().count());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(2);
 
         // Completing A
         taskService.complete(tasks.get(0).getId());
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(1,
-                     tasks.size());
-        assertEquals("B",
-                     tasks.get(0).getName());
-        assertEquals(1,
-                     managementService.createTimerJobQuery().count());
+        assertThat(tasks).hasSize(1);
+        assertThat(tasks.get(0).getName()).isEqualTo("B");
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(1);
 
         // Completing B should end the process
         taskService.complete(tasks.get(0).getId());
-        assertEquals(0,
-                     managementService.createTimerJobQuery().count());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(0);
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
 
         // Use case 2: The non interrupting timer on B fires
         processInstance = runtimeService.startProcessInstanceByKey("nonInterruptingWithInclusiveMerge");
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
-        assertEquals(2,
-                     managementService.createTimerJobQuery().count());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(2);
 
         // Completing B
         taskService.complete(tasks.get(1).getId());
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(1,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals(1,
-                     managementService.createTimerJobQuery().count());
+        assertThat(tasks).hasSize(1);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(1);
 
         // Firing the timer should activate E and F too
         String jobId = managementService.createTimerJobQuery().singleResult().getId();
         managementService.moveTimerToExecutableJob(jobId);
         managementService.executeJob(jobId);
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(3,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("C",
-                     tasks.get(1).getName());
-        assertEquals("D",
-                     tasks.get(2).getName());
+        assertThat(tasks).hasSize(3);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("C");
+        assertThat(tasks.get(2).getName()).isEqualTo("D");
 
         // Firing the timer on D
-        assertEquals(1,
-                     managementService.createTimerJobQuery().count());
+        assertThat(managementService.createTimerJobQuery().count()).isEqualTo(1);
         jobId = managementService.createTimerJobQuery().singleResult().getId();
         managementService.moveTimerToExecutableJob(jobId);
         managementService.executeJob(jobId);
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(4,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("C",
-                     tasks.get(1).getName());
-        assertEquals("D",
-                     tasks.get(2).getName());
-        assertEquals("G",
-                     tasks.get(3).getName());
+        assertThat(tasks).hasSize(4);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("C");
+        assertThat(tasks.get(2).getName()).isEqualTo("D");
+        assertThat(tasks.get(3).getName()).isEqualTo("G");
 
         // Completing C, D, A and G in that order to give the engine a bit of exercise
         taskService.complete(taskService.createTaskQuery().taskName("C").singleResult().getId());
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(3,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("D",
-                     tasks.get(1).getName());
-        assertEquals("G",
-                     tasks.get(2).getName());
+        assertThat(tasks).hasSize(3);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("D");
+        assertThat(tasks.get(2).getName()).isEqualTo("G");
 
         taskService.complete(taskService.createTaskQuery().taskName("D").singleResult().getId());
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("G",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("G");
 
         taskService.complete(taskService.createTaskQuery().taskName("A").singleResult().getId());
         tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).orderByTaskName().asc().list();
-        assertEquals(1,
-                     tasks.size());
-        assertEquals("G",
-                     tasks.get(0).getName());
+        assertThat(tasks).hasSize(1);
+        assertThat(tasks.get(0).getName()).isEqualTo("G");
 
         taskService.complete(taskService.createTaskQuery().taskName("G").singleResult().getId());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     /**
@@ -540,37 +447,28 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         // Use case 1 (easy):
         // "When C completes, depending on the data, we can immediately issue E no matter what the status is of A or B."
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("trickyInclusiveMerge");
-        assertNotNull(processInstance);
-        assertFalse(processInstance.isEnded());
-        assertEquals(3,
-                     taskService.createTaskQuery().count());
+        assertThat(processInstance).isNotNull();
+        assertThat(processInstance.isEnded()).isFalse();
+        assertThat(taskService.createTaskQuery().count()).isEqualTo(3);
 
         Task taskC = taskService.createTaskQuery().taskName("C").singleResult();
         taskService.complete(taskC.getId());
         List<Task> tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(3,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
-        assertEquals("E",
-                     tasks.get(2).getName());
+        assertThat(tasks).hasSize(3);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
+        assertThat(tasks.get(2).getName()).isEqualTo("E");
 
         taskService.complete(tasks.get(0).getId());
         taskService.complete(tasks.get(1).getId());
         tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("D",
-                     tasks.get(0).getName());
-        assertEquals("E",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("D");
+        assertThat(tasks.get(1).getName()).isEqualTo("E");
 
         taskService.complete(tasks.get(0).getId());
         taskService.complete(tasks.get(1).getId());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     /**
@@ -586,44 +484,33 @@ public class Activiti6Test extends PluggableActivitiTestCase {
         // Instead, it's done by the InactivatedActivityBehavior
 
         runtimeService.startProcessInstanceByKey("trickyInclusiveMerge");
-        assertEquals(3,
-                     taskService.createTaskQuery().count());
+        assertThat(taskService.createTaskQuery().count()).isEqualTo(3);
 
         List<Task> tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(3,
-                     tasks.size());
-        assertEquals("A",
-                     tasks.get(0).getName());
-        assertEquals("B",
-                     tasks.get(1).getName());
-        assertEquals("C",
-                     tasks.get(2).getName());
+        assertThat(tasks).hasSize(3);
+        assertThat(tasks.get(0).getName()).isEqualTo("A");
+        assertThat(tasks.get(1).getName()).isEqualTo("B");
+        assertThat(tasks.get(2).getName()).isEqualTo("C");
         taskService.complete(tasks.get(0).getId());
         taskService.complete(tasks.get(1).getId());
 
         // C should still be open
         tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(1,
-                     tasks.size());
-        assertEquals("C",
-                     tasks.get(0).getName());
+        assertThat(tasks).hasSize(1);
+        assertThat(tasks.get(0).getName()).isEqualTo("C");
 
         // If C is now completed, the inclusive gateway should also be completed
         // and D and E should be open tasks
         taskService.complete(tasks.get(0).getId());
         tasks = taskService.createTaskQuery().orderByTaskName().asc().list();
-        assertEquals(2,
-                     tasks.size());
-        assertEquals("D",
-                     tasks.get(0).getName());
-        assertEquals("E",
-                     tasks.get(1).getName());
+        assertThat(tasks).hasSize(2);
+        assertThat(tasks.get(0).getName()).isEqualTo("D");
+        assertThat(tasks.get(1).getName()).isEqualTo("E");
 
         // Completing them should just end the process instance
         taskService.complete(tasks.get(0).getId());
         taskService.complete(tasks.get(1).getId());
-        assertEquals(0,
-                     runtimeService.createExecutionQuery().count());
+        assertThat(runtimeService.createExecutionQuery().count()).isEqualTo(0);
     }
 
     /**
@@ -633,6 +520,6 @@ public class Activiti6Test extends PluggableActivitiTestCase {
     @org.activiti.engine.test.Deployment(resources = "org/activiti/engine/test/api/v6/Activiti6Test.testOneTaskProcess.bpmn20.xml")
     public void testProcessDefinitionTagCreated() {
         ProcessDefinition processDefinition = repositoryService.createProcessDefinitionQuery().singleResult();
-        assertNull(((ProcessDefinitionEntity) processDefinition).getEngineVersion());
+        assertThat(((ProcessDefinitionEntity) processDefinition).getEngineVersion()).isNull();
     }
 }
